--- a/ klcommon --username zmhn320@163.com/kllan/doc/history
+++ b/ klcommon --username zmhn320@163.com/kllan/doc/history
@@ -1,5 +1,48 @@
 history
 
+
+3.25.2009
+
+- 改进错误报告
+  行号定位，容错能力，更详尽的错误建议
+
+- 解释器中的文件装载改为文本方式
+
+3.24.2009
+
+- 修正if的语法树解析，使其支持：
+  if( 1 ) if( 0 ) print( "something" );及
+  if( 1 ) do-something else if( 1 ) do-something
+
+- 修正复合语句及if语句语法树解析错误，如丢失树节点、if包含错误节点等
+
+3.23.2009
+
+- 加入对for的支持
+- 增加二维数组操作插件，用于支持定义二维数组
+
+3.2.2009
+
+- 加入动态插件支持
+- 改写了makefile
+- 加入了解释器kl
+
+1.20.2008
+
+- 修正字符串相关等内存泄露
+- 初步限制if, while条件表达式类型
+
+1.15.2008
+
+- 修正代码警告
+
+1.12.2008
+
+- 加入一维数组的支持
+  还不支持函数间数组按值传递
+
+- 加入C调用脚本函数机制
+
 1.10.2009
 
 kl目前支持：
@@ -11,38 +54,3 @@ kl目前支持：
 - 转义字符'\n' '\t'
 - 双目运算符：+、-、*、/、%、&&、||、!=、>、<、>=、<=、==、
 - 单目运算符：!、-
-
-1.12.2008
-
-- 加入一维数组的支持
-  还不支持函数间数组按值传递
-
-- 加入C调用脚本函数机制
-
-1.15.2008
-
-- 修正代码警告
-
-1.20.2008
-
-- 修正字符串相关等内存泄露
-- 初步限制if, while条件表达式类型
-
-3.2.2009
-
-- 加入动态插件支持
-- 改写了makefile
-- 加入了解释器kl
-
-3.23.2009
-
-- 加入对for的支持
-- 增加二维数组操作插件，用于支持定义二维数组
-
-3.24.2009
-
-- 修正if的语法树解析，使其支持：
-  if( 1 ) if( 0 ) print( "something" );及
-  if( 1 ) do-something else if( 1 ) do-something
-
-- 修正复合语句及if语句语法树解析错误，如丢失树节点、if包含错误节点等
