--- a/ klcommon --username zmhn320@163.com/kllan/doc/todo
+++ b/ klcommon --username zmhn320@163.com/kllan/doc/todo
@@ -1,14 +1,20 @@
 
-1.10.2009
+4.9.2009
 
-- 完善日志系统、错误处理
-
-1.12.2009
-
-- 完善数组相关
+- unix下读取windows下写的脚本文件时，行号统计还是会出错
 
 3.2.2009
 
 - 改善动态装载插件的实现方法
 - 释放动态库，注销动态库注册的函数
+
+1.12.2009
+
+- 完善数组相关
+
+1.10.2009
+
+- 完善日志系统、错误处理
+
+
 
